templates/backup-operator_template.yaml
---
# Source: backup-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-backup-operator
  labels:
    helm.sh/chart: backup-operator-1.0.0
    app.kubernetes.io/name: backup-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook
    protocol: TCP
    name: webhook
  selector:
    app.kubernetes.io/name: backup-operator
    app.kubernetes.io/instance: release-name
---
# Source: backup-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-backup-operator
  labels:
    helm.sh/chart: backup-operator-1.0.0
    app.kubernetes.io/name: backup-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backup-operator
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/name: backup-operator
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-backup-operator
      securityContext:
        fsGroup: 65532
      containers:
      - name: manager
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        image: "ghcr.io/universal-backup-operator/backup-operator:1.0.0"
        imagePullPolicy: IfNotPresent
        args:
        - --zap-devel=false
        - --leader-elect
        ports:
        - name: healthz
          containerPort: 8081
          protocol: TCP
        - name: webhook
          containerPort: 9443
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8081
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: webhook-certificate
          mountPath: /tmp/k8s-webhook-server/serving-certs
          readOnly: true
      volumes:
      - name: tmp
        emptyDir: {}
      - name: webhook-certificate
        secret:
          secretName: release-name-backup-operator-webhook
---
# Source: backup-operator/templates/webhook/mutation.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-backup-operator-mutation
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-backup-operator-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-name-backup-operator
      namespace: default
      path: /mutate-backup-operator-io-v1-backuprun
  failurePolicy: Fail
  name: mbackuprun.kb.io
  rules:
  - apiGroups:
    - backup-operator.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupruns
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: release-name-backup-operator
      namespace: default
      path: /mutate-backup-operator-io-v1-backupstorage
  failurePolicy: Fail
  name: mbackupstorage.kb.io
  rules:
  - apiGroups:
    - backup-operator.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - backupstorages
  sideEffects: None
---
# Source: backup-operator/templates/webhook/validation.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-backup-operator-validation
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-backup-operator-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service: &service
      name: release-name-backup-operator
      namespace: default
      path: /validate-backup-operator-io-v1-backuprun
  failurePolicy: Fail
  name: vbackuprun.kb.io
  rules:
  - &rule
    apiGroups:
    - backup-operator.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - backupruns
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      <<: *service
      path: /validate-backup-operator-io-v1-backupschedule
  failurePolicy: Fail
  name: vbackupschedule.kb.io
  rules:
  - <<: *rule
    resources:
    - backupschedules
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      <<: *service
      path: /validate-backup-operator-io-v1-backupstorage
  failurePolicy: Fail
  name: vbackupstorage.kb.io
  rules:
  - <<: *rule
    resources:
    - backupstorages
  sideEffects: None
